Added Film filter.  Bug fixes for having the same actions for film details and filmlist.

--- a/src/app/components/film-list/film-list.component.html
+++ b/src/app/components/film-list/film-list.component.html
@@ -1,2 +1,3 @@
+<app-film-filter (filter)="filter($event)"></app-film-filter>
 <app-film-item *ngFor="let film of films" [film]="film">
 </app-film-item>
